--- a/runtime/pages/page3_2_threeDPlot.Rmd
+++ b/runtime/pages/page3_2_threeDPlot.Rmd
@@ -1,7 +1,7 @@
 ### Plot Options
 ```{r}
 checkboxInput("plotlines", "Plot lines", value = TRUE)
-checkboxInput("plotpoints", "Plot points", value = FALSE)
+checkboxInput("plotevents", "Plot foot events", value = TRUE)
 
 selectizeInput("participant3d", "Participant",
   choices = participants, selected = participants[1], multiple = FALSE)
@@ -12,9 +12,12 @@ numericInput("startTime", "Start time (s)",
   min = 0, max = 500, value = 0, step = 1)
 numericInput("endTime", "End time (s)",
   min = 0, max = 500, value = 0, step = 1)
+checkboxInput("doFilter_3d", "Filter data", value = FALSE)
 
-numericInput("maxv", "Max velocity for filtering",
-  min = 0, max = 1000, value = 100, step = 1)
+numericInput("maxv", "Max velocity for filtering (m/s)",
+  min = 0, value = 10, step = 1)
+  numericInput("maxvrot", "Max rotational velocity for filtering (radians/s)",
+  min = 0, value = 3, step = 1)
 numericInput("nPasses", "Number of filter passes",
   min = 1, max = 10, value = 1, step = 1)
 
@@ -55,49 +58,55 @@ draw_mean_axes <- function(data, trackerName, label, labelsize = 0.6){
   rotCols <- grep(paste0(trackerName,"\\.rot"), colnames(data), value = TRUE)
   
   # Calculate the means (First 1000 datapoints should suffice, is just for plot)
-  meanPos <- sapply(data[1:1000, posCols], mean, na.rm = TRUE)
-  meanQuaternion <- sapply(data[1:1000, rotCols], mean, na.rm = TRUE) # this should be done with slerp but for now this is fine.
+  medPos <- sapply(data[1:1000, posCols], median, na.rm = TRUE)
+  meanQuaternion <- sapply(data[1:1000, rotCols], median, na.rm = TRUE) # this should be done with slerp but for now this is fine.
   
-  points3d(meanPos[1], meanPos[2], meanPos[3], col = "red", size = 5)
-  tf_gizmo(meanPos, 0.1, quaternionToRotationMatrix(meanQuaternion), label, labelsize)
+  points3d(medPos[1], medPos[2], medPos[3], col = "red", size = 5)
+  tf_gizmo(medPos, 0.1, quaternion_to_rotation_matrix(meanQuaternion), label, labelsize)
 }
 
-output$ThreeD <- renderRglwidget({
+output$ThreeD <- renderPlaywidget({
   # Clear existing rgl plot
   clear3d()
   # Set uniform aspect ratio
   rgl::aspect3d(1, 1, 1)
   # Get data
   data <- preprocess_data(input$participant3d, as.numeric(input$trialNum3d))
-  data <- filter_all_data(data, input$maxv, input$nPasses)
+  if (input$doFilter_3d) {
+    data <- filter_all_data(data, input$maxv, input$maxvrot, input$nPasses)
+  }
   
   # Subset data based on start and end times
-  data <- subset(data, time >= input$startTime & time <= input$endTime)
+  #data <- subset(data, time >= input$startTime & time <= input$endTime)
   
-  # add axes
+  # Add axes
   axes3d()
   axis3d('y', pos = c(0, 0, 0))
   
   # Plot transformation data
   # Add origin arrows
   tf_gizmo(c(0,0,0), 0.2)
-  origin <- -tmatrix[1:3, 4]
-  arrow3d(origin, origin + 0.3*tmatrix[1:3, 1], col="red")   # X-axis
-  arrow3d(origin, origin + 0.3*tmatrix[1:3, 2], col="green") # Y-axis
-  arrow3d(origin, origin + 0.3*tmatrix[1:3, 3], col="blue")  # Z-axis
   
   # Create your 3D plot
   leftFootCols <- grep("LeftFoot.pos", colnames(data), value = TRUE)
   rightFootCols <- grep("RightFoot.pos", colnames(data), value = TRUE)
   
   if (input$plotlines) {
-    lines3d(data[[leftFootCols[1]]], data[[leftFootCols[2]]], data[[leftFootCols[3]]], color="blue") 
-    lines3d(data[[rightFootCols[1]]], data[[rightFootCols[2]]], data[[rightFootCols[3]]], color="red") 
+    lines3d(data[[leftFootCols[1]]], data[[leftFootCols[2]]], data[[leftFootCols[3]]], color="black") 
+    lines3d(data[[rightFootCols[1]]], data[[rightFootCols[2]]], data[[rightFootCols[3]]], color="black") 
   }
   
-  if (input$plotpoints) {
-    points3d(data[[leftFootCols[1]]], data[[leftFootCols[2]]], data[[leftFootCols[3]]], color="blue", size=2)
-    points3d(data[[rightFootCols[1]]], data[[rightFootCols[2]]], data[[rightFootCols[3]]], color="red", size=2)
+  if (input$plotevents) {
+    # Add gait events
+    gaitParams <- filteredParams()  # Assuming this function provides the gait parameters
+    gaitParams <- gaitParams[gaitParams$participant == input$participant3d & gaitParams$trialNum == input$trialNum3d, ]
+    
+    rParams <- gaitParams[gaitParams$heelStrikes.foot == "Right", ]
+    lParams <- gaitParams[gaitParams$heelStrikes.foot == "Left", ]
+    
+    # Plot heel strikes
+    points3d(rParams$heelStrikes.pos.x, rParams$heelStrikes.pos.y, rParams$heelStrikes.pos.z, color = "red", size = 5)
+    points3d(lParams$heelStrikes.pos.x, lParams$heelStrikes.pos.y, lParams$heelStrikes.pos.z, color = "blue", size = 5)
   }
   
   draw_mean_axes(data, "TreadmillLeft", "L", 1)
@@ -110,7 +119,7 @@ output$ThreeD <- renderRglwidget({
 # Add a download handler for the plot
 output$download3dPlot <- downloadHandler(
   filename = function() {
-    paste("3D_plot", Sys.Date(), ".png", sep = "")
+    paste("3D_plot", Sys.pos.Date(), ".png", sep = "")
   },
   content = function(file) {
     # Capture the current 3D plot
@@ -163,5 +172,4 @@ output$download3dPlot <- downloadHandler(
 #  # Return the rgl widget
 #  rglwidget(width = "1200px", height = "600px")
 #}
-
 ```
